tests/baselines/reference/contextualSignatureInstatiationContravariance(strict=true).errors.txt
contextualSignatureInstatiationContravariance.ts(1,20): error TS7008: Member 'x' implicitly has an 'any' type.
contextualSignatureInstatiationContravariance.ts(2,36): error TS7008: Member 'y' implicitly has an 'any' type.
contextualSignatureInstatiationContravariance.ts(3,37): error TS7008: Member 'y2' implicitly has an 'any' type.
contextualSignatureInstatiationContravariance.ts(8,1): error TS2322: Type '<T extends Animal>(x: T, y: T) => void' is not assignable to type '(g: Giraffe, e: Elephant) => void'.
  Types of parameters 'y' and 'e' are incompatible.
    Property 'y' is missing in type 'Elephant' but required in type 'Giraffe'.
contextualSignatureInstatiationContravariance.ts(8,6): error TS2454: Variable 'f2' is used before being assigned.
contextualSignatureInstatiationContravariance.ts(11,6): error TS2454: Variable 'f2' is used before being assigned.


==== contextualSignatureInstatiationContravariance.ts (6 errors) ====
    interface Animal { x }
                       ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    interface Giraffe extends Animal { y }
                                       ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    interface Elephant extends Animal { y2 }
                                        ~~
!!! error TS7008: Member 'y2' implicitly has an 'any' type.
    
    var f2: <T extends Animal>(x: T, y: T) => void;
    
    var g2: (g: Giraffe, e: Elephant) => void;
    g2 = f2; // error because Giraffe and Elephant are disjoint types
    ~~
!!! error TS2322: Type '<T extends Animal>(x: T, y: T) => void' is not assignable to type '(g: Giraffe, e: Elephant) => void'.
!!! error TS2322:   Types of parameters 'y' and 'e' are incompatible.
!!! error TS2322:     Property 'y' is missing in type 'Elephant' but required in type 'Giraffe'.
!!! related TS2728 contextualSignatureInstatiationContravariance.ts:2:36: 'y' is declared here.
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.
    
    var h2: (g1: Giraffe, g2: Giraffe) => void;
    h2 = f2; // valid because Giraffe satisfies the constraint. It is safe in the traditional contravariant fashion.
         ~~
!!! error TS2454: Variable 'f2' is used before being assigned.